# ptz_agx_me

./: CMakeLists.txt  README.md  build_ci.sh  ptz-ctrl-protocol.patch
config/: zlog.conf
doc/tan/: AGX思维导图.xmind  AGX框架.vsdx  AGX流程图.vsdx  AGX盒子环境搭建记录.docx  AGX软件框架设计说明 2023-11-08 V1.0.docx  AGX雷达融合项目.docx  pil回灌数据操作文档-唐松泉-V1.1.docx  pil通讯协议-V1.3.docx  tcpserver.rar  tracer与C2和上位机通信协议V1.0.15(2).docx  反无系统网络通用通信协议及信息定义基本要求V0.5.docx  反无雷达通信协议V1.8.docx  塞防产品了解.docx  路由器ip.txt  雷达ptz融合方案通信协议V0.2.docx  雷达现有软件功能框架概览.docx  雷达组网通信协议V1.2(1).docx
doc/tan/SDK2022_11_15/SDK2022_11_15/: 从这里开始.txt
doc/tan/SDK2022_11_15/SDK2022_11_15/TracerTool/: tmControlClient.ini
doc/tan/SDK2022_11_15/SDK2022_11_15/TracerTool/language/: DvsCfgToolCN.ini  DvsCfgToolEN.ini  tmConfigDlgCN.ini  tmConfigDlgEN.ini
doc/tan/SDK2022_11_15/SDK2022_11_15/doc/: 光电接入简介.doc  工作流程.docx
doc/tan/SDK2022_11_15/SDK2022_11_15/引导协议及demo/: yolov模板对应.txt  光电指控协议V2.0.docx
doc/tan/SDK2022_11_15/SDK2022_11_15/引导协议及demo/pro_tool_20220924_01/inc/codehelper/include/: api.h  buffer.h  general.h
doc/tan/SDK2022_11_15/SDK2022_11_15/引导协议及demo/pro_tool_20220924_01/inc/spdlog/: logger.hpp
doc/tan/SDK2022_11_15/SDK2022_11_15/引导协议及demo/pro_tool_20220924_01/inc/spdlog/include/spdlog/: async_logger-inl.h  async_logger.h
doc/tan/SDK2022_11_15/SDK2022_11_15/引导协议及demo/pro_tool_20220924_01/inc/spdlog/lib/: spdlog.lib
doc/tan/SDK2022_11_15/SDK2022_11_15/引导协议及demo/pro_tool_20220924_01/inc/spdlog/lib/cmake/spdlog/: spdlogConfigVersion.cmake
doc/tan/SDK2022_11_15/SDK2022_11_15/引导协议及demo/pro_tool_20220924_01/inc/spdlog/lib/pkgconfig/: spdlog.pc
doc/tan/SDK2022_11_15/SDK2022_11_15/引导协议及demo/pro_tool_20220924_01/inc/spdlog/lib/shared/: spdlogd.lib
doc/tan/SDK2022_11_15/SDK2022_11_15/引导协议及demo/pro_tool_20220924_01/inc/spdlog/lib/v142_x64/: spdlog.lib
doc/tan/SDK2022_11_15/SDK2022_11_15/引导协议及demo/pro_tool_20220924_01/pro_tool/: CameraUavProtocal.cpp  CameraUavProtocal.h  pro_tool.cpp  pro_tool.sln  pro_tool.vcxproj  pro_tool.vcxproj.filters
src/: CMakeLists.txt  main.c
src/app/: CMakeLists.txt
src/app/alg_app/: CMakeLists.txt  alg_app.cpp  alg_app.h
src/app/c2_network/: CMakeLists.txt  c2_network.c  c2_network.h
src/app/ptz/: CMakeLists.txt  ptz_app.cpp  ptz_app.h
src/app/radars_network/: CMakeLists.txt  radar_network.c  radar_network.h
src/common/: CMakeLists.txt  common.c  common.h
src/common/storage/: CMakeLists.txt  storage.c  storage.h
src/common/storage/file/: CMakeLists.txt  storage_file.c  storage_file.h
src/common/sysport/: CMakeLists.txt  sysport.c  sysport.h
src/common/sysport/task/: CMakeLists.txt  sysport_task.c  sysport_task.h
src/common/sysport/time/: CMakeLists.txt  sysport_time.c  sysport_time.h
src/common/sysport/timer/: CMakeLists.txt  sysport_timer.c  sysport_timer.h
src/common/tools/: CMakeLists.txt  skyfend_tools.c  skyfend_tools.h
src/inc/: skyfend_error.h
src/srv/: CMakeLists.txt
src/srv/algs/: CMakeLists.txt  alg_interface.c  alg_interface.h
src/srv/algs/ai_alg/: ai_main.cpp  ai_main.h  config.h  guide.cpp  guide.h  tf.cpp  tf.h
src/srv/algs/yolov8_infer/: BYTETracker.cpp  bytetrack.cpp  yolov8.cpp
src/srv/algs/yolov8_infer/include/: common.hpp  yolov8.h  yolov8.hpp
src/srv/alink/: CMakeLists.txt  alink.c  alink.h  alink_defines.h
src/srv/alink/analysis/: CMakeLists.txt  alink_order.c  alink_recv.c  alink_recv.h  alink_socket.c
src/srv/alink/check/: CMakeLists.txt  alink_check.c  alink_check.h  checksum.c
src/srv/alink/command/: CMakeLists.txt
src/srv/alink/command/system/: CMakeLists.txt  alink_system.c  alink_system.h
src/srv/alink/command/track/: CMakeLists.txt  alink_track.c  alink_track.h
src/srv/alink/upload/: CMakeLists.txt  alink_package.c  alink_upload.c  alink_upload.h
src/srv/eth_link/: CMakeLists.txt  device_network_manager.c  device_network_manager.h  eth_link.c  eth_link.h  eth_link_ptz.c  eth_link_ptz.h  eth_link_server.c
src/srv/eth_link/eth_protocol/: CMakeLists.txt  netcon_protocol.c  netcon_protocol.h
src/srv/eth_link/ptz_protocol/: CMakeLists.txt  ptz_control.c  ptz_control.h  ptz_control_protocol.c  ptz_control_protocol.h
src/srv/eth_link/socket/: CMakeLists.txt  tcp_client.c  tcp_client.h  tcp_server.c  tcp_server.h  udp_socket.c  udp_socket.h
src/srv/log/: CMakeLists.txt  skyfend_log.c  skyfend_log.h
thirdpart/zlog/lib/: libzlog.so.1.2
